# spotify-importer

./: .gitignore  Cargo.toml  LICENSE  README.md  example-raw.csv  filter-albums.json  nextpaginatedResult.json  test.html  test.json  tidal-tracks-deathcore.json  tidal-tracks-mixed.json  toExtract.json  ytInitialData.json
src/: cli.rs  main.rs  provider.rs  raw.rs  tidal.rs  youtube.rs
