[package]
name = "tidal-spotify-importer"
version = "0.1.0"
authors = ["don <donovandall@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
rspotify = { version = "0.10" }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
futures = "0.3.8"
rayon = "1.5.0"
anyhow = "1.0.34"
structopt = "0.3.20"
async-trait = "0.1.42"
csv = "1.1"